# Todo-List-API

./: Dokumentasi.txt
Tampilan Frontend/1. user_registration/: code.html
Tampilan Frontend/2. User Login/: code.html
Tampilan Frontend/3. TodoList Dasbord/: code.html
Tampilan Frontend/4. Create TodoList/: code.html
Tampilan Frontend/5. Edit TodoList/: code.html
backend/: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  init-mongo.js  start.bat  start.sh
backend/src/: GuessingGame.rs  main.rs  mainBACKUP.rs
backend/src/handlers/: mod.rs  task_handlers.rs  todo_handlers.rs  user_handlers.rs
backend/src/models/: mod.rs  task.rs  todo.rs  user.rs
backend/src/routes/: mod.rs  task_routes.rs  todo_routes.rs  user_routes.rs
backend/src/services/: mod.rs  task_service.rs  todo_mongo_service.rs  todo_service.rs  user_service.rs
backend/src/utils/: auth.rs  database.rs  error.rs  jwt.rs  mod.rs
backend/tests/: api_tests.http
frontend/: index.html  package-lock.json  package.json  tail
frontend/src/: App.vue  main.js
frontend/src/components/: CreateTodoList.vue  EditTodoList.vue  Login.vue  Register.vue  TodoListDashboard.vue
frontend/src/services/: api.js
frontend/src/utils/: jwt.js
