[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
mongodb = "2.8"
bson = { version = "2.8", features = ["chrono-0_4"] }
dotenv = "0.15"
futures-util = "0.3"